
nobase_dist_pkginclude_HEADERS = \
  stubs/algorithm \
  stubs/allocator.h \
  stubs/assert.h \
  stubs/bitset \
  stubs/cassert \
  stubs/cctype \
  stubs/cerrno \
  stubs/char_traits.h \
  stubs/clocale \
  stubs/cmath \
  stubs/complex \
  stubs/csetjmp \
  stubs/csignal \
  stubs/cstdarg \
  stubs/cstddef \
  stubs/cstdio \
  stubs/cstdlib \
  stubs/cstring \
  stubs/ctype.h \
  stubs/cwchar \
  stubs/cwctype \
  stubs/deque \
  stubs/dirent.h \
  stubs/errno.h \
  stubs/exception \
  stubs/fcntl.h \
  stubs/fpos.h \
  stubs/fstream \
  stubs/functional \
  stubs/grp.h \
  stubs/iomanip \
  stubs/ios \
  stubs/ios_types.h \
  stubs/iosfwd \
  stubs/iostream \
  stubs/istream \
  stubs/iterator \
  stubs/limits \
  stubs/list \
  stubs/locale \
  stubs/locale.h \
  stubs/map \
  stubs/math.h \
  stubs/mbstate.h \
  stubs/memory \
  stubs/new \
  stubs/new.h \
  stubs/numeric \
  stubs/ostream \
  stubs/priority_queue \
  stubs/pwd.h \
  stubs/queue \
  stubs/set \
  stubs/setjmp.h \
  stubs/signal.h \
  stubs/sstream \
  stubs/stack \
  stubs/stdarg.h \
  stubs/stddef.h \
  stubs/stdexcept \
  stubs/stdio.h \
  stubs/stdlib.h \
  stubs/streambuf \
  stubs/string \
  stubs/string.h \
  stubs/strstream \
  stubs/strstream.h \
  stubs/sys \
  stubs/time.h \
  stubs/typeinfo \
  stubs/unistd.h \
  stubs/utility \
  stubs/utime.h \
  stubs/vector \
  stubs/wchar.h \
  stubs/wctype.h \
  stubs/sys/file.h \
  stubs/sys/stat.h \
  stubs/sys/types.h

