
include $(top_srcdir)/keystone.am

noinst_LTLIBRARIES = \
  libClassScope.la \
  libFunctionScope.la \
  libLocalScope.la \
  libNamespaceScope.la \
  libPrototypeScope.la \
  libTemplateParameterScope.la \
  libScope.la

libClassScope_la_SOURCES = ClassScope.cpp ClassScope.h
libFunctionScope_la_SOURCES = FunctionScope.cpp FunctionScope.h
libLocalScope_la_SOURCES = LocalScope.cpp LocalScope.h
libNamespaceScope_la_SOURCES = NamespaceScope.cpp NamespaceScope.h
libPrototypeScope_la_SOURCES = PrototypeScope.cpp PrototypeScope.h
libTemplateParameterScope_la_SOURCES =TemplateParameterScope.cpp TemplateParameterScope.h
libScope_la_SOURCES = Scope.cpp Scope.h


