
include $(top_srcdir)/keystone.am

noinst_LTLIBRARIES = \
  libBasicType.la \
  libClassType.la \
  libEnumType.la \
  libFunctionType.la \
  libIndirectType.la \
  libNamespaceType.la \
  libTemplateParameterType.la \
  libTemplateTemplateParameterType.la \
  libType.la

libBasicType_la_SOURCES = BasicType.cpp BasicType.h
libClassType_la_SOURCES = ClassType.cpp ClassType.h
libEnumType_la_SOURCES = EnumType.cpp EnumType.h
libFunctionType_la_SOURCES = FunctionType.cpp FunctionType.h
libIndirectType_la_SOURCES = IndirectType.cpp IndirectType.h
libNamespaceType_la_SOURCES = NamespaceType.cpp NamespaceType.h
libTemplateParameterType_la_SOURCES = TemplateParameterType.cpp TemplateParameterType.h
libTemplateTemplateParameterType_la_SOURCES = TemplateTemplateParameterType.cpp TemplateTemplateParameterType.h
libType_la_SOURCES = Type.cpp Type.h


