
include $(top_srcdir)/keystone.am

noinst_LTLIBRARIES = \
  libNameDeclarationInvariantFacilitator.la \
  libNameDeclarationInvariantVisitor.la \
  libScopeInvariantFacilitator.la \
  libScopeInvariantVisitor.la \
  libTypeInvariantFacilitator.la \
  libTypeInvariantVisitor.la


libNameDeclarationInvariantFacilitator_la_SOURCES = NameDeclarationInvariantFacilitator.cpp NameDeclarationInvariantFacilitator.h
libNameDeclarationInvariantVisitor_la_SOURCES = NameDeclarationInvariantVisitor.cpp NameDeclarationInvariantVisitor.h
libScopeInvariantFacilitator_la_SOURCES = ScopeInvariantFacilitator.cpp ScopeInvariantFacilitator.h
libScopeInvariantVisitor_la_SOURCES = ScopeInvariantVisitor.cpp ScopeInvariantVisitor.h
libTypeInvariantFacilitator_la_SOURCES = TypeInvariantFacilitator.cpp TypeInvariantFacilitator.h
libTypeInvariantVisitor_la_SOURCES = TypeInvariantVisitor.cpp TypeInvariantVisitor.h


EXTRA_DIST = Visitor.h

